--- a/docs/demo.css
+++ b/docs/demo.css
@@ -15,6 +15,11 @@ html, body, .vuep {
   box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.3);
 }
 
+.vue-demo-block-demo-only,
+.vue-demo-block-demo-only:hover {
+  box-shadow: none;
+}
+
 .vue-demo-block > .vue-demo {
   margin: 2em;
 }
